--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       <nav class="navbar">
         <ul>
           <li><a href="#home">Home</a></li>
-          <li><a href="../services/services.html">Services</a></li>
-          <li><a href="../services/aboutus.html">About Us</a></li>
-          <li><a href="../contact/contact.html">Contact Us</a></li>
-          <li><a href="../contact/contact.html">Blog</a></li>
+          <li><a href="./services/services.html">Services</a></li>
+          <li><a href="./services/aboutus.html">About Us</a></li>
+          <li><a href="./contact/contact.html">Contact Us</a></li>
+          <li><a href="./contact/contact.html">Blog</a></li>
         </ul>
       </nav>
     </header>
