--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li><a href="./services/services.html">Services</a></li>
           <li><a href="./services/aboutus.html">About Us</a></li>
           <li><a href="./contact/contact.html">Contact Us</a></li>
-          <li><a href="#">Blog</a></li>
+          <li><a href="https://slc-blogpage.netlify.app/">Blog</a></li>
         </ul>
       </nav>
     </header>
