--- a/services/aboutus.html
+++ b/services/aboutus.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>About Us</title>
+    <title>SLC About Us</title>
     <link rel="stylesheet" type="text/css" href="styles1.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
@@ -13,7 +13,7 @@
           <a href="www.slc.iitm.ac.in/home"><img src="Picsart_22-12-07_23-52-16-595.png" alt="Organization Logo" align="left"></a>
           <a href="https://www.iitm.ac.in/"><img class="IIT_logo" src="IIT_Madras_Logo.svg.png" alt="IIT_Madras_Logo" align="right" style="height: 100px;"></a>
         </div>
-        <h1 align="left"><pre>  <font style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">About Us</font></pre></h1>
+        <h1 align="left"><pre>About Us</pre></h1>
     </header>
     <div class="parallax">
         <div class="container">
