--- a/services/aboutus.html
+++ b/services/aboutus.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>SLC About Us</title>
-    <link rel="stylesheet" type="text/css" href="styles1.css">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
@@ -13,21 +13,21 @@
           <a href="www.slc.iitm.ac.in/home"><img src="Picsart_22-12-07_23-52-16-595.png" alt="Organization Logo" align="left"></a>
           <a href="https://www.iitm.ac.in/"><img class="IIT_logo" src="IIT_Madras_Logo.svg.png" alt="IIT_Madras_Logo" align="right" style="height: 100px;"></a>
         </div>
-        <h1 align="left"><pre>About Us</pre></h1>
+        <h1 class="aboutus"><pre>About Us</pre></h1>
     </header>
     <div class="parallax">
         <div class="container">
             <h1 class="animated fadeInDown">Who We Are</h1>
-            <p class="animated fadeInUp"><font size="+2">The SLC is IIT Madras’ apex student legislative body, established by the Senate of IIT Madras. It consists of nearly 60 student legislators elected from various hostels and departments. It has jurisdiction over all student-related matters, and acts as an advisory body to the Institute Senate through the Board of Students.</font></p>
+            <p class="animated fadeInUp">The SLC is IIT Madras’ apex student legislative body, established by the Senate of IIT Madras. It consists of nearly 60 student legislators elected from various hostels and departments. It has jurisdiction over all student-related matters, and acts as an advisory body to the Institute Senate through the Board of Students.</p>
 
             <h1 class="animated fadeInDown">Our Mission</h1>
-            <p class="animated fadeInUp"><font size="+2">The SLC works to address student grievances, promote student welfare, and ensure effective communication between students and the institute's administration. It discusses and deliberates on matters related to academics, infrastructure, hostel facilities, extracurricular activities, and student policies.</font></p>
+            <p class="animated fadeInUp">The SLC works to address student grievances, promote student welfare, and ensure effective communication between students and the institute's administration. It discusses and deliberates on matters related to academics, infrastructure, hostel facilities, extracurricular activities, and student policies.</p>
 
             <h2 class="animated fadeInDown">Our Current Member</h2>
             <ul>
-                <li class="animated fadeInUp"><font size="+1">member name goes here</li></font>
-                <li class="animated fadeInUp"><font size="+1">member name goes here</li></font>
-                <li class="animated fadeInUp"><font size="+1">member name goes here</li></font>
+                <li class="animated fadeInUp">member name goes here</li>
+                <li class="animated fadeInUp">member name goes here</li>
+                <li class="animated fadeInUp">member name goes here</li>
             </ul>
         </div>
     </div>
