--- a/services/services.html
+++ b/services/services.html
@@ -14,31 +14,31 @@
     <div class="logo">
         <a href="www.slc.iitm.ac.in/home"><img src="Picsart_22-12-07_23-52-16-595.png" alt="Organization Logo" align="left"></a>
         <a href="https://www.iitm.ac.in/"><img class="IIT_logo" src="IIT_Madras_Logo.svg.png" alt="IIT_Madras_Logo" align="right" style="height: 100px;"></a></div>
-    <h1 align="left"><pre>  <font style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Services</font></pre></h1>
+    <h1 align="left"><pre>Services</pre></h1>
 </header>
 
 <br><br><br><br><br><br><br><br><br><br><br>
   <section id="overview">
-    <h2 class="animated fadeIn"><font style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Overview</font></h2>
+    <h2 class="animated fadeIn">Overview</h2>
     <!-- Overview content goes here -->
   </section>
   <section id="services">
-    <h2 class="animated fadeIn"><font style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Services Offered</font></h2>
+    <h2 class="animated fadeIn">Services Offered</h2>
     <!-- Services offered content goes here -->
   </section>
 
   <section id="feedback">
-    <h2 class="animated fadeIn"><font style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Student Feedback</font></h2>
+    <h2 class="animated fadeIn">Student Feedback</h2>
     <!-- Student feedback content goes here -->
   </section>
 
   <section id="elections">
-    <h2 class="animated fadeIn"><font style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Elections and Participation</font></h2>
+    <h2 class="animated fadeIn">Elections and Participation</h2>
     <!-- Elections and participation content goes here -->
   </section>
 
   <section id="resources">
-    <h2 class="animated fadeIn"><font style="font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;">Resources and Documentation</font></h2>
+    <h2 class="animated fadeIn">Resources and Documentation</h2>
     <!-- Resources and documentation content goes here -->
   </section>
   <footer>
