--- a/contact/contact.html
+++ b/contact/contact.html
@@ -5,10 +5,10 @@
   <title>Legislative Council Members Contacts</title>
   <style>
     body {
-      font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+      font-family: 'Nunito', sans-serif;
+      background: #1a1a1a;
       margin: 0;
       padding: 0;
-      background-color: #f5f5f5;
     }
 
     .container {
@@ -27,18 +27,20 @@
     .title {
       font-size: 32px;
       margin-bottom: 20px;
-      font-family: 'Arial Black', sans-serif; 
+      font-family: 'Nunito', sans-serif; 
     }
 
     .member-grid {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-auto-rows: 1fr;
       gap: 20px;
       margin-top: 20px;
     }
 
     .member-card {
-      background-color: #fff;
+      background-color: #333;
+      color: #fff;
       border-radius: 5px;
       box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
       padding: 20px;
@@ -56,10 +58,11 @@
     }
 
     .member-card h2 {
+      color: #2baed2;
       margin-top: 0;
       font-size: 18px;
       font-weight: bold;
-      font-family: 'Arial Black', sans-serif; 
+      font-family: 'Nunito', sans-serif; 
     }
 
     .member-card p {
@@ -80,17 +83,21 @@
       color: #fff;
       padding: 20px;
       text-align: center;
+      margin-top: 10px;
     }
 
 
     @media screen and (max-width: 768px) {
       .member-grid {
-        grid-template-columns: repeat(auto-fit, minmax(100%, 1fr));
+          grid-template-columns: 1fr 1fr 1fr 1fr;
+          grid-auto-rows: 1fr;
       }
     }
 
 
     .member-card {
+      background-color: transparent;
+      border: 1px solid #f1f1f1;
       display: flex;
       flex-direction: column;
       align-items: center;
@@ -109,6 +116,41 @@
     .member-card p {
       font-size: 16px;
     }
+
+
+    /*this onwards is the new addition: flipping action*/
+    /*
+    .member-card {
+      background-color: transparent;
+      border: 1px solid #f1f1f1;
+      perspective: 1000px;
+    }
+    .member-card-inner {
+      position: relative;
+      width: 100%;
+      height: 100%;
+      text-align: center;
+      transition: transform 0.8s;
+      transform-style: preserve-3d;
+    }
+    .member-card:hover .member-card-inner {
+      transform: rotateY(180deg);
+    }
+    .member-card-front, .member-card-back {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      -webkit-backface-visibility: hidden;
+      backface-visibility: hidden;
+    }
+    
+    .member-card-back {
+      background-color: #333;
+      color: white;
+      transform: rotateY(180deg);
+    }
+    */
+
   </style>
 </head>
 <body>
@@ -120,59 +162,199 @@
     <div class="member-grid">
 
       <div class="member-card">
-        <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
-        <h2>Member Name</h2>
-        <p>Post: XYZ Secretary</p>
-        <p>Email: member@smail.iitm.ac.in</p>
-        <p>Phone: 1234567890</p>
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p><!--some extra information about the member-->//some info on the member</p>
+          </div>
+        </div>
       </div>
 
       <div class="member-card">
-        <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
-        <h2>Member Name</h2>
-        <p>Post: XYZ Secretary</p>
-        <p>Email: member@smail.iitm.ac.in</p>
-        <p>Phone: 1234567890</p>
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
       </div>
 
       <div class="member-card">
-        <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
-        <h2>Member Name</h2>
-        <p>Post: XYZ Secretary</p>
-        <p>Email: member@smail.iitm.ac.in</p>
-        <p>Phone: 1234567890</p>
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
       </div>
 
       <div class="member-card">
-        <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
-        <h2>Member Name</h2>
-        <p>Post: XYZ Secretary</p>
-        <p>Email: member@smail.iitm.ac.in</p>
-        <p>Phone: 1234567890</p>
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
       </div>
 
       <div class="member-card">
-        <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
-        <h2>Member Name</h2>
-        <p>Post: XYZ Secretary</p>
-        <p>Email: member@smail.iitm.ac.in</p>
-        <p>Phone: 1234567890</p>
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
       </div>
 
       <div class="member-card">
-        <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
-        <h2>Member Name</h2>
-        <p>Post: XYZ Secretary</p>
-        <p>Email: member@smail.iitm.ac.in</p>
-        <p>Phone: 1234567890</p>
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
       </div>
 
       <div class="member-card">
-        <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
-        <h2>Member Name</h2>
-        <p>Post: XYZ Secretary</p>
-        <p>Email: member@smail.iitm.ac.in</p>
-        <p>Phone: 1234567890</p>
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="member-card">
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="member-card">
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
+      </div>
+
+      
+      <div class="member-card">
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="member-card">
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="member-card">
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="member-card">
+        <div class="member-card-inner">
+          <div class="member-card-front">
+            <img src="https://e1.pxfuel.com/desktop-wallpaper/577/168/desktop-wallpaper-gentleman-jacket-person-clothing-smile-man-suit-professional-male-formal-wear-businessperson-trevor-noah-the-daily-show-white-collar-worker-business-executive-2048x1334-men-business-thumbnail.jpg" alt="Profile Image" class="profile-image"">
+            <h2>Member Name</h2>
+            <p>Post: XYZ Secretary</p>
+            <p>Email: member@smail.iitm.ac.in</p>
+            <p>Phone: 1234567890</p>
+          </div>
+          <div class="member-card-back">
+            <p>//some info on the member</p>
+          </div>
+        </div>
       </div>
 
       <div class="member-card">
