--- a/services/aboutus.html
+++ b/services/aboutus.html
@@ -10,7 +10,7 @@
 <body>
     <header>
         <div class="logo">
-          <a href="www.slc.iitm.ac.in/home"><img src="Picsart_22-12-07_23-52-16-595.png" alt="Organization Logo" align="left"></a>
+          <a href="www.slc.iitm.ac.in/home"><img src="Picsart_22-12-07_23-52-16-595.png" alt="Organization Logo" style="height: 15rem;" align="left"></a>
           <a href="https://www.iitm.ac.in/"><img class="IIT_logo" src="IIT_Madras_Logo.svg.png" alt="IIT_Madras_Logo" align="right" style="height: 100px;"></a>
         </div>
         <h1 class="aboutus"><pre>About Us</pre></h1>
