--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
 
     <nav class="navbar">
       <ul>
-        <li><a href="#home">Home</a></li>
         <li><a href="./services/services.html">Services</a></li>
+        <li><a href="/agenda/index.html">Post your Agenda</a></li>
         <li><a href="./services/aboutus.html">About us</a></li>
         <li><a href="./contact/contact.html">Contact us</a></li>
         <li><a href="https://slc-blogpage.netlify.app/">Blog</a></li>
